--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,6 @@
 	"style/onepage-scroll",
 	"style/aspect-ratio",
 	"style/media-object",
-	"style/lazyYT";
+	"style/lazyYT",
+	"style/wp-core";
 	//"style/arrow-nav";
-  
-  
