--- a/scss/foundation/_settings.scss
+++ b/scss/foundation/_settings.scss
@@ -1086,6 +1086,7 @@
 // Tables
 
 // $include-html-table-classes: $include-html-classes;
+$include-html-table-classes: false;
 
 // These control the background color for the table and even rows
 // $table-bg: #fff;
