--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -77,9 +77,9 @@ $base-line-height: 150% !default;
 // @mixins
 //
 // We use this to add transitions to elements
-// $property - Default: all, Options: http://www.w3.org/TR/css3-transitions/#animatable-properties
+// $property - Default: all, Options: //www.w3.org/TR/css3-transitions/#animatable-properties
 // $speed - Default: 300ms
-// $ease - Default:ease-out, Options: http://css-tricks.com/almanac/properties/t/transition-timing-function/
+// $ease - Default:ease-out, Options: //css-tricks.com/almanac/properties/t/transition-timing-function/
 @mixin single-transition($property:all, $speed:300ms, $ease:ease-out) {
   transition: $property $speed $ease;
 }
@@ -212,7 +212,7 @@ $base-line-height: 150% !default;
 // @mixins
 //
 // Makes an element visually hidden, but accessible.
-// @see http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
+// @see //snook.ca/archives/html_and_css/hiding-content-for-accessibility
 @mixin element-invisible {
   position: absolute !important;
   height: 1px;
@@ -367,20 +367,20 @@ $cursor-text-value: text !default;
 		font-family: 'Lato';
 		font-style: normal;
 		font-weight: 100;
-		src: local('Lato Hairline'), local('Lato-Hairline'), url(http://fonts.gstatic.com/s/lato/v8/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
+		src: local('Lato Hairline'), local('Lato-Hairline'), url(//fonts.gstatic.com/s/lato/v8/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
 	}
 	@font-face {
 		font-family: 'Lato';
 		font-style: normal;
 		font-weight: 300;
-		src: local('Lato Light'), local('Lato-Light'), url(http://fonts.gstatic.com/s/lato/v8/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
+		src: local('Lato Light'), local('Lato-Light'), url(//fonts.gstatic.com/s/lato/v8/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
 	}
 	
 	@font-face {
 		font-family: 'Lato';
 		font-style: normal;
 		font-weight: 400;
-		src: local('Lato Regular'), local('Lato-Regular'), url(http://fonts.gstatic.com/s/lato/v8/9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
+		src: local('Lato Regular'), local('Lato-Regular'), url(//fonts.gstatic.com/s/lato/v8/9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
 	}
 
   @if $include-html-global-classes {
