--- a/scss/foundation/components/_grid.scss
+++ b/scss/foundation/components/_grid.scss
@@ -153,6 +153,7 @@ $total-columns: 12 !default;
 // $size - Name of class to use, i.e. "large" will generate .large-1, .large-2, etc.
 @mixin grid-html-classes($size) {
 
+/*
   @for $i from 0 through $total-columns - 1 {
     .#{$size}-push-#{$i} {
       @include grid-column($push:$i, $collapse:null, $float:false);
@@ -161,7 +162,7 @@ $total-columns: 12 !default;
       @include grid-column($pull:$i, $collapse:null, $float:false);
     }
   }
-
+*/
   .column,
   .columns { @include grid-column($columns:false, $position:true); }
 
@@ -173,10 +174,11 @@ $total-columns: 12 !default;
   [class*="column"] + [class*="column"]:last-child { float: $opposite-direction; }
   [class*="column"] + [class*="column"].end { float: $default-float; }
 
-
+/*
   @for $i from 0 through $total-columns - 1 {
     .#{$size}-offset-#{$i} { @include grid-column($offset:$i, $collapse:null,$float:false); }
   }
+*/
   .#{$size}-reset-order {
     margin-#{$default-float}: 0;
     margin-#{$opposite-direction}: 0;
@@ -228,6 +230,7 @@ $total-columns: 12 !default;
     @media #{$medium-up} {
       @include grid-html-classes($size:medium);
       // Old push and pull classes
+	  /*
       @for $i from 0 through $total-columns - 1 {
         .push-#{$i} {
           @include grid-column($push:$i, $collapse:null, $float:false);
@@ -236,9 +239,11 @@ $total-columns: 12 !default;
           @include grid-column($pull:$i, $collapse:null, $float:false);
         }
       }
+	  */
     }
     @media #{$large-up} {
       @include grid-html-classes($size:large);
+	  /*
       @for $i from 0 through $total-columns - 1 {
         .push-#{$i} {
           @include grid-column($push:$i, $collapse:null, $float:false);
@@ -247,14 +252,17 @@ $total-columns: 12 !default;
           @include grid-column($pull:$i, $collapse:null, $float:false);
         }
       }
+	  */
     }
   }
   @if $include-xl-html-grid-classes {
     @media #{$xlarge-up} {
       @include grid-html-classes($size:xlarge);
     }
+	/*
     @media #{$xxlarge-up} {
       @include grid-html-classes($size:xxlarge);
     }
+	*/
   }
 }
