--- a/scss/foundation/components/_tables.scss
+++ b/scss/foundation/components/_tables.scss
@@ -119,7 +119,7 @@ $table-margin-bottom: rem-calc(20) !default;
   tr td { display: $table-display; line-height: $table-line-height; }
 }
 
-
+/*
 @include exports("table") {
   @if $include-html-table-classes {
     table {
@@ -127,3 +127,4 @@ $table-margin-bottom: rem-calc(20) !default;
     }
   }
 }
+*/
